--- a/test1/01real-complex.ipynb
+++ b/test1/01real-complex.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "### [complex numbers](https://www.mathsisfun.com/numbers/complex-numbers.html)\n",
     "\n",
-    ">A Complex Number is a combination of a Real Number and an Imaginary Number\n",
+    ">A Complex Number is a combination of a Real Number and an [Imaginary Number](https://www.mathsisfun.com/numbers/imaginary-numbers.html)\n",
     "\n",
     "![](./images/complex-number.png)\n",
     "\n",
@@ -138,7 +138,18 @@
     "\n",
     ">An Imaginary Number, when squared, gives a negative result\n",
     "\n",
-    "$$i \\times i = -1$$"
+    "$$i \\times i = -1$$\n",
+    "$$i^2 = -1$$\n",
+    "\n",
+    "An imaginary number \"cycles through 4 values\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$ i^0 = 1$$\n",
+    "$$ i^1 = i$$\n",
+    "$$ i^2 = -1$$\n",
+    "$$ i^3 = -i$$\n",
+    "\n"
    ]
   },
   {
