--- a/test1/02number-theory.ipynb
+++ b/test1/02number-theory.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prove and use basic properties of natural numbers (e.g., [properties of divisibility](https://www.math-only-math.com/properties-of-divisibility.html))\n",
+    "# Prove and use basic properties of natural numbers (e.g., [properties of divisibility](https://www.math-only-math.com/properties-of-divisibility.html))\n",
     "\n",
-    "### [Properties of Natural Numbers](https://www.cuemath.com/numbers/properties-of-natural-numbers/)\n",
+    "## [Properties of Natural Numbers](https://www.cuemath.com/numbers/properties-of-natural-numbers/)\n",
     "\n",
     "- Closure Property \n",
     "  - for addition and multiplication result in a natural number\n",
