--- a/test3/02limits_continuity.ipynb
+++ b/test3/02limits_continuity.ipynb
@@ -4,13 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Limits and Continuity (SMR 5.2)\n",
-    "\n",
-    "## Derive basic properties of limits and continuity, including the Sum, Difference, Product, Constant Multiple, and Quotient Rules, using the formal definition of a limit\n",
+    "# Limits and Continuity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Derive basic properties of limits and continuity, including the Sum, Difference, Product, Constant Multiple, and Quotient Rules, using the formal definition of a limit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Show that a polynomial function is continuous at a point\n",
     "\n",
-    "## Apply the intermediate value theorem, using the geometric implications of continuity"
+    "for a function $f(x)$ to be continuous at x = c, then:\n",
+    "\n",
+    "- $f(c)$ is defined\n",
+    "- limit exists \n",
+    "- they must be equal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply the [intermediate value theorem](https://www.mathsisfun.com/algebra/intermediate-value-theorem.html), using the geometric implications of [continuity](https://www.mathsisfun.com/calculus/continuity.html)\n",
+    "\n"
    ]
   },
   {
